# krkrsdl2_compat_build

./: .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
